[tool.poetry]
name = "project-denoise"
version = "0.1.0"
description = "A project for denoising data"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
scipy = "^1.10.0"
numpy = "^1.24.0"
tensorflow = "^2.15.0"
scikit-learn = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
